Adicionei uma pasta

--- a/formulario/WEB JavaScript.html
+++ b/formulario/WEB JavaScript.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -34,7 +34,6 @@
     <form action="SalvarDados.php">
 
         <table class="Geral" border="1">
-
             <tr>
                 <td class="tituloGeral" colspan="100%">Tabela de Cadastro <br />&nbsp;<br> </td>
             </tr>
